Utilities/otbliblas/csharp/dotnetLibLAS/LibLASCAPI.cs

/******************************************************************************
 * $Id$
 *
 * Project:  libLAS - http://liblas.org - A BSD library for LAS format data.
 * Purpose:  
 * Author:   Martin Vales, martin_gnu@mundo-r.com
 *
 ******************************************************************************
 * Copyright (c) 2008, Martin Vales
 *
 * All rights reserved.
 * 
 * Redistribution and use in source and binary forms, with or without 
 * modification, are permitted provided that the following 
 * conditions are met:
 * 
 *     * Redistributions of source code must retain the above copyright 
 *       notice, this list of conditions and the following disclaimer.
 *     * Redistributions in binary form must reproduce the above copyright 
 *       notice, this list of conditions and the following disclaimer in 
 *       the documentation and/or other materials provided 
 *       with the distribution.
 *     * Neither the name of the Martin Isenburg or Iowa Department 
 *       of Natural Resources nor the names of its contributors may be 
 *       used to endorse or promote products derived from this software 
 *       without specific prior written permission.
 * 
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT 
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS 
 * FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE 
 * COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, 
 * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, 
 * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS 
 * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED 
 * AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, 
 * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT 
 * OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY 
 * OF SUCH DAMAGE.
 ****************************************************************************/

using System;
using System.Collections.Generic;
using System.Text;
using System.Runtime.InteropServices;
using LASError = System.Int32;
using LASWriterH = System.IntPtr;
using LASReaderH = System.IntPtr;
using LASPointH = System.IntPtr;
using LASGuidH = System.IntPtr;
using LASVLRH = System.IntPtr;
using LASHeaderH = System.IntPtr;

namespace LibLAS
{
    internal class CAPI
    {
        /** Returns the version string for this library.
         * @return the version string for this library.
         * 
         * Name liblas1.dll is considered as unified across all builders on Windows platform.
         * When building libLAS on Windows using NMAKE and makefile.vc, C API DLL is
         * called liblas1.dll. The same name is used by Visual Studio solution liblas.sln.
         */
        public const string DLL_LAS_VERSION = "liblas1.dll";

        [DllImport(DLL_LAS_VERSION)]
        public static extern String LAS_GetVersion();

        /****************************************************************************/
        /* Error handling                                                           */
        /****************************************************************************/

        /** Resets the error stack for the libLAS C API.  
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASError_Reset();

        /** Pops the top error off of the error stack for the libLAS C API.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASError_Pop();

        /** Returns the error number of the last error on the error stack.
        *  @return the error number of the last error on the error stack.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASError_GetLastErrorNum();

        /** Returns the name of the method the last error message happened in.
        *  @return the name of the method the last error message happened in.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASError_GetLastErrorMsg();

        /** Returns the name of the method the last error message happened in.
        *  @return the name of the method the last error message happened in.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASError_GetLastErrorMethod();

        /** Returns the number of error messages on the error stack.
        *  @return the number of error messages on the error stack.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern int LASError_GetErrorCount();

        /** Prints the last error message in the error stack to stderr.  If 
        *  there is no error on the error stack, only the message is printed.
        *  The function does not alter the error stack in any way.
        *  @param message Message to include in the stderr output
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASError_Print(String message);

        /****************************************************************************/
        /* Reader operations                                                        */
        /****************************************************************************/

        /** Creates a LASReaderH object that can be used to read LASHeaderH and 
        *  LASPointH objects with.  The LASReaderH must not be created with a 
        *  filename that is opened for read or write by any other API functions.
        *  @return opaque pointer to a LASReaderH instance.
        *  @param filename Filename to open for read 
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASReaderH LASReader_Create(String filename);

        /** Reads the next available point on the LASReaderH instance.  If no point 
        *  is available to read, NULL is returned.  If an error happens during 
        *  the reading of the next available point, an error will be added to the 
        *  error stack and can be returned with the LASError_GetLastError* methods.
        *  @param hReader the opaque handle to the LASReaderH 
        *  @return an opaque handle to a LASPointH object, or NULL if no point is 
        *  available to read or an error occured.  Use the 
        *  LASError_GetLastError* methods to confirm the existence of an error 
        *  if NULL is returned.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASPointH LASReader_GetNextPoint(LASReaderH hReader);

        /** Reads a LASPointH from the given position in the LAS file represented 
        *  by the LASReaderH instance.  If no point is available at that location, 
        *  NULL is returned.  If an error happens during the reading of the point, 
        *  an error will be added to the error stack and can be returned with the 
        *  LASError_GetLastError* methods.
        *  @param hReader the opaque handle to the LASReaderH
        *  @param position the integer position of the point in the file to read.
        *  @return an opaque handle to a LASPointH object, or NULL if no point is 
        *  available at the given location or an error occured.  Use the 
        *  LASError_GetLastError* methods to confirm the existence of an error 
        *  if NULL is returned.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASPointH LASReader_GetPointAt(LASReaderH hReader, UInt32 position);

        /** Closes the file for reading operations represented by the LASReaderH instance.
        *  @param hReader the opqaue handle to the LASReaderH
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASReader_Destroy(LASReaderH hReader);

        /** Returns a LASHeaderH representing the header for the file
        *  @param hReader the LASReaderH instance
        *  @return a LASHeaderH representing the header for the file.  NULL is returned 
        *  in the event of an error.  Use the LASError_GetLastError* methods to check
        *  in the event of a NULL return.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASHeaderH LASReader_GetHeader(LASReaderH hReader);

        /****************************************************************************/
        /* Point operations                                                         */
        /****************************************************************************/


        /** Returns the X value for the point.  This value is not scaled or offset
        *  by any header values and stands on its own.  If you need points to have 
        *  a scale and/or offset applied, this must be done in conjunction with the 
        *  header values after the value is read.
        *  @param hPoint the opaque pointer to the LASPointH instance  
        *  @return the X value for the LASPointH
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASPoint_GetX(LASPointH hPoint);

        /** Sets the X value for the point.  This value must be scaled or offset 
        *  by any header values before being set.
        *  @param hPoint the opaque pointer to the LASPointH instance
        *  @param value the double value to set for the X value of the point
        *  @return an error number if an error occured during the setting of the point.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetX(LASPointH hPoint, double value);

        /** Returns the Y value for the point.  This value is not scaled or offset
        *  by any header values and stands on its own.  If you need points to have 
        *  a scale and/or offset applied, this must be done in conjunction with the 
        *  header values after the value is read.
        *  @param hPoint the opaque pointer to the LASPointH instance  
        *  @return the Y value for the LASPointH
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASPoint_GetY(LASPointH hPoint);

        /** Sets the Y value for the point.  This value must be scaled or offset 
        *  by any header values before being set.
        *  @param hPoint the opaque pointer to the LASPointH instance
        *  @param value the double value to set for the Y value of the point
        *  @return an error number if an error occured during the setting of the point.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetY(LASPointH hPoint, double value);

        /** Returns the Z value for the point.  This value is not scaled or offset
        *  by any header values and stands on its own.  If you need points to have 
        *  a scale and/or offset applied, this must be done in conjunction with the 
        *  header values after the value is read.
        *  @param hPoint the opaque pointer to the LASPointH instance  
        *  @return the Z value for the LASPointH
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASPoint_GetZ(LASPointH hPoint);

        /** Sets the Z value for the point.  This value must be scaled or offset 
        *  by any header values before being set.
        *  @param hPoint the opaque pointer to the LASPointH instance
        *  @param value the double value to set for the Z value of the point
        *  @return an error number if an error occured during the setting of the point.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetZ(LASPointH hPoint, double value);
